samples/_failures_safe/1761786108_5096e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8b13d33.c: In function ‘main’:
./samples/SAFE/__tmp_b8b13d33.c:147:5: error: expected expression at end of input
  147 |     for (
      |     ^~~
./samples/SAFE/__tmp_b8b13d33.c:147:5: error: expected declaration or statement at end of input
